--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,11 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+    />
+
     <title>IT-logger</title>
   </head>
   <body>
